Lightbox z-index fix

--- a/src/lightbox/lightbox.css
+++ b/src/lightbox/lightbox.css
@@ -29,6 +29,7 @@ div.lightbox {
   left: 0px;
   width: 100%;
   text-align: center;
+  z-index: 9999;
 }
 
 div.lightbox div {
